@@ -4,6 +4,7 @@
 
 * Add supporting standing order report
 * Added application starter with embedded CMS and ASPSP Profile
+* Provided implementation of delta access for transaction list request
 
 == Add supporting standing order report
 
@@ -21,3 +22,10 @@ Only `application/JSON` for response content type is supported.
 
 New module `gateway-app-embedded` has been added for launching connector with embedded CMS and ASPSP Profile.
 All existing CMS and ASPSP Profile endpoints are exposed within the same application.
+
+== Provided implementation of delta access for transaction list request
+
+Delta access parameters (`entryReferenceFrom` and `deltaList`) are provided to SPI level in `SpiTransactionReportParameters` object.
+Also `acceptMediaType`, `withBalance`, `dateFrom`, `dateTo`, `bookingStatus` parameters were moved from method parameters to `SpiTransactionReportParameters` object.
+Parameters `dateFrom` and `dateTo` are not mandatory from this moment.
+If any of period parameters is NULL in incoming request from XS2A it'll be initialised with test date before invoking get transactions list in Ledgers.
